made it so the input clears after every guess

--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@ function guess(){
 	}
 	index++;
 	quaestor.innerHTML = questions[index]; // this index manipulation goes away
-										   // once we have webcrawling.
+	ans.value = ""; // once we have webcrawling.
 }
 
 </script>
