--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 .header {
   padding: 40px;
   text-align: center;
-  background: white; 
-  color: black;
+  background: black; 
+  color: white;
 }
 .main {
   flex: 70%;
@@ -28,11 +28,17 @@
 .side {
   flex: 30%;
   padding: 20px;
+  background:#9be5ca;
+}
+
+.thumb{
+    width:10%;
 }
 
 .input {  
   display: flex;
   flex-wrap: wrap;
+  background:#9aa5de;
 }
 
 @media (max-width: 700px) {
@@ -47,16 +53,17 @@
     <h3>WIKIPEDIA GUESSING GAME!!!</h3>
     <h4>Guess the subject of the Wikipedia Article correctly to score points!</h4>
 </div>
+<hr noshade>
 <div class="input">
     <div class="main">
     <h4 id="score"><span class="sksksksksk">POINTS: 0</span></h4>
     <p id="maintext"></p>
     <div class="side">
-        <br><br><br><br><br><br><br><br><br><br><br>
         <form>
         	<input type="text" id="answer" name="textin"><br><br>
         	<input type="button" value="Guess!" onclick="guess()">
         </form>
+        <img src="thumbs-up.gif" class="thumb">
     </div>
 </div>
 
